v0.2.1/_sources/index.rst.txt
Welcome to imgutils's Documentation
=========================================================

Overview
-------------

``imgutils`` is a module which can parse and manage the \
configuration file's structure and their versions.

.. toctree::
    :maxdepth: 2
    :caption: Tutorials

    tutorials/installation/index
    tutorials/quick_start/index

.. toctree::
    :maxdepth: 2
    :caption: Best Practice

.. toctree::
    :maxdepth: 2
    :caption: Information

    information/environment.result

.. toctree::
    :maxdepth: 2
    :caption: API Documentation

    api_doc/config/index
    api_doc/data/index
    api_doc/detect/index
    api_doc/edge/index
    api_doc/metrics/index
    api_doc/operate/index
    api_doc/segment/index
    api_doc/tagging/index
    api_doc/utils/index
    api_doc/validate/index

.. toctree::
    :maxdepth: 2
    :caption: Contributor Guide

